--- a/ex006/style.css
+++ b/ex006/style.css
@@ -16,13 +16,13 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #000000cc;
   }
   
   .modal-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     background-color: #13131f;
     margin: auto;
@@ -35,14 +35,18 @@
     display: flex;
     justify-content: center;
     align-items: start;
-    width: 40%;
+    width: 37%;
     height: 70%;
+  }
+
+  .video iframe{
+    width: 100%;
   }
   
   .texto{
     font-family: Arial, Helvetica, sans-serif;
     color: #827d62;
-    width: 60%;
+    width: 57%;
     height: 70%;
     overflow-y: auto
   }
@@ -50,6 +54,7 @@
    ul{
     display: flex;
     width: 100%;
+    height: 10%;
     list-style-type: none;
     justify-content: center;
   }
@@ -80,10 +85,5 @@
     width: 100%;
     font-size: 30px;
   }
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+
   
