--- a/ex007/style.css
+++ b/ex007/style.css
@@ -26,7 +26,7 @@
     width: 90%;
     min-width: 360px;
     height: 80%;
-    min-height: 900px;
+    min-height: 700px;
     margin: auto;
     border-radius: 10px;
     padding: 10px;
@@ -70,6 +70,7 @@
 }
 .internaModal #texto p{
     text-align: justify;
+    font-size: .9em;
     margin-bottom: 1em;
     width: 90%;
 }
