--- a/ex007/style.css
+++ b/ex007/style.css
@@ -63,9 +63,8 @@
     align-items: center;
     
     width: 100%;
-    height: 50%;
-
-    
+    /*height: 50%;*/
+    height: 65%;
    
 
 }
@@ -87,8 +86,9 @@
     justify-content: center;
     
     width: 100%;
-    height: 15%;
-
+    /*height: 15%;*/
+    padding: 40px 0px 50px 0px;
+    
     
 
 
@@ -109,6 +109,7 @@
     padding: 10px 20px 10px 20px;
     margin: 0px 10px 0px 10px;
     border-radius: 5px;
+    
 }
 
 
