--- a/testeProjeto/estilo/style.css
+++ b/testeProjeto/estilo/style.css
@@ -40,17 +40,20 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-#mapa{
-    display: none;
-    border: 1px solid rgba(0, 0, 0, 0.21);
-    margin: 50px 0px;
-    width: 80%;
-    max-width: 600px;
+
+
+main #mapa {
+    margin: 20px;
+    height: 500px;
+    max-width: 90%;
 }
-#mapa iframe{
-    width: 100%;
-    height: 350px;
+
+@media (min-width: 800px){
+    main #mapa{
+        max-width: 800px;
+    }
 }
+
 
 #caixaBusca #titulo {
     margin-bottom: 20px;
@@ -64,16 +67,17 @@ main {
     padding: 8px;
     width: calc(100% - 16px);
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 #caixaBusca #result {
     text-align: left;
     font-size: 1.2em;
     color: #333;
-    padding-top: 20px;
+    
     letter-spacing: .9px;
     line-height: 1.4em;
+    padding: 20px 8px 0px 8px;
 }
 
 #caixaBusca #btnCep {
