--- a/ProjetoCEP/estilo/style.css
+++ b/ProjetoCEP/estilo/style.css
@@ -8,15 +8,15 @@
 
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #ececec ;
 }
 
 header {
-    height: 150px;
+    height: 140px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: white;
     box-shadow: 0 2px 4px #0000001a;
 }
 
@@ -28,29 +28,38 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 #caixaBusca {
     background-color: #fff;
     text-align: center;
     width: 80%;
-    max-width: 600px;
+    max-width: 700px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-#mapa{
+
+
+main #mapa {
+    margin: 20px;
+    height: 400px;
+    max-width: 90%;
+    border: 1px solid rgba(0, 0, 0, 0.201);
+    border-radius: 8px;
     display: none;
-    border: 1px solid rgba(0, 0, 0, 0.21);
-    margin: 50px 0px;
-    width: 80%;
-    max-width: 600px;
 }
-#mapa iframe{
-    width: 100%;
-    height: 350px;
+
+@media (min-width: 800px){
+    main #mapa{
+        max-width: 700px;
+    }
+    #caixaBusca{
+        padding: 20px 40px 20px 40px;
+    }
 }
+
 
 #caixaBusca #titulo {
     margin-bottom: 20px;
@@ -64,16 +73,17 @@ main {
     padding: 8px;
     width: calc(100% - 16px);
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 #caixaBusca #result {
     text-align: left;
     font-size: 1.2em;
     color: #333;
-    padding-top: 20px;
+    
     letter-spacing: .9px;
     line-height: 1.4em;
+    padding: 20px 8px 0px 8px;
 }
 
 #caixaBusca #btnCep {
