--- a/ListaTarefas/estilo/style.css
+++ b/ListaTarefas/estilo/style.css
@@ -26,10 +26,10 @@ header {
 }
 
 #tarefaTxt {
-    height: 100px;
-    font-size: 2em;
+    height: 80px;
+    font-size: 1.5em;
     width: 80%;
-    padding-left: 10%;
+    padding-left: 3%;
     border-radius: 10px 0px 0px 10px;
 }
 
@@ -40,7 +40,7 @@ header {
     color: white;
     font-weight: bold;
     border: none;
-    height: 100px;
+    height: 80px;
     border-radius: 0px 10px 10px 0px;
 }
 
@@ -62,7 +62,7 @@ main {
     height: 60px;
     width: 100%;
     box-shadow: 0 0 20px #00000062;
-    margin-bottom: 2%;
+    margin-bottom: 5px;
     cursor: pointer;
     border-radius: 10px;
     min-width: 400px;
@@ -99,9 +99,8 @@ main {
 .item-botao {
     flex: 20%;
 }
-
 .delete {
-    background-color: rgb(205, 65, 65);
+    background-color: rgb(209, 84, 84);
     color: white;
     border: none;
     padding: 10px;
@@ -109,6 +108,14 @@ main {
     width: 100%;
     cursor: pointer;
     border-radius: 0px 10px 10px 0px;
+}
+@media(min-width: 1000px){
+    .item-nome {
+        flex: 70%;
+    }
+    .item-botao {
+        flex: 15%;
+    }
 }
 
 .mdi-check-circle {
