--- a/ListaTarefas/estilo/style.css
+++ b/ListaTarefas/estilo/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: lightblue;
+    background-color: rgb(220, 226, 228);
 }
 
 h1 {
@@ -26,22 +26,22 @@ header {
 }
 
 #tarefaTxt {
-    height: 80px;
-    font-size: 1.5em;
+    height: 60px;
+    font-size: 1.3em;
     width: 80%;
     padding-left: 3%;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 5px 0px 0px 5px;
 }
 
 .add {
     width: 20%;
     cursor: pointer;
-    background: rgb(26, 141, 26);
+    background: #007bff;
     color: white;
     font-weight: bold;
     border: none;
-    height: 80px;
-    border-radius: 0px 10px 10px 0px;
+    height: 60px;
+    border-radius: 0px 5px 5px 0px;
 }
 
 main {
@@ -61,18 +61,18 @@ main {
     background-color: white;
     height: 60px;
     width: 100%;
-    box-shadow: 0 0 20px #00000062;
+    box-shadow: 0px 0px 2px #00000079;
     margin-bottom: 5px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     min-width: 400px;
     max-width: 1200px;
     overflow: hidden; /* Para garantir que o conteúdo não ultrapasse os limites */
 }
 
 .item.check {
-    background: #b8e5ba;
-    border-radius: 10px;
+    background: #d1e9d3;
+    border-radius: 5px;
 }
 
 .item.check .item-nome {
@@ -81,14 +81,14 @@ main {
 }
 
 .item-icone {
-    flex: 15%;
+    flex: 13%;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.6em;
 }
 
 .item-nome {
-    flex: 65%;
-    font-size: 20px;
+    flex: 67%;
+    font-size: 1.1em;
     font-weight: bold;
     white-space: nowrap; 
     margin-right: 10px;
@@ -107,11 +107,11 @@ main {
     height: 80px;
     width: 100%;
     cursor: pointer;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0px 5px 5px 0px;
 }
 @media(min-width: 1000px){
     .item-nome {
-        flex: 70%;
+        flex: 75%;
     }
     .item-botao {
         flex: 15%;
